# Boltastic

./: .gitignore  LICENSE  README.md  requirements.txt
elastic/agent-definitions/: core-agent.json  nova-agent.json  orbit-agent.json
elastic/anomaly-jobs/: anomaly_detection_jobs.json
elastic/connectors/: connectors.ndjson
elastic/dashboards/: billing_and_cost_dashboard.ndjson
elastic/index-templates/: billing-events.json  campaign-metrics.json  cost-centers.json  crm-activities.json  frontend-errors.json  salesforce-opportunities.json  social-mentions.json  system-logs.json
elastic/workflows/: campaign-alert.yaml  fetch-github-code.yaml  incident-remediation.yaml  salesforce-create-record.yaml  salesforce-soql-query.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWidget.jsx  Navbar.jsx
frontend/src/pages/: Chat.jsx  Home.jsx
mcp-server/: Dockerfile  README.md  env_example  mcp_server.py  pyproject.toml
scripts/: bootstrap-indices.py
scripts/synthetic-data/: deal_interventions_upload.csv  generate_all.py  generate_billing_events.py  generate_campaign_metrics.py  generate_cost_centers.py  generate_crm_activities.py  generate_deals_intervention.py  generate_frontend_errors.py  generate_sales_playbook.py  generate_salesforce_opportunities.py  generate_social_mentions.py  generate_system_logs.py  sales_playbooks_upload.csv
supervisor/boltastic_agent/: agent.py  example_env
supervisor/boltastic_agent/.adk/: session.db
